[package]
name = "write-into"
version = "0.2.0"
authors = ["abvalatouski"]
edition = "2021"
description = "A trait to write things into `io::Write`."
license = "MIT"
repository = "https://github.com/abvalatouski/write_into"
readme = "README.md"
documentation = "https://docs.rs/write_into"

[dependencies]

[dev-dependencies]
leb128 = "0.2.5"
