[package]
name = "write-into"
version = "0.3.6"
authors = ["abvalatouski"]
edition = "2021"
description = "A trait to write things into io::Write."
license = "MIT"
repository = "https://github.com/abvalatouski/write-into"
readme = "README.md"
documentation = "https://docs.rs/write-into"

[dependencies]
