[package]
name = "write-into"
version = "0.3.7"
authors = ["abvalatouski"]
edition = "2021"
description = "A trait to write things into io::Write."
license = "MIT"
repository = "https://github.com/abvalatouski/write-into"
readme = "README.md"
documentation = "https://docs.rs/write-into"
keywords = ["write", "into", "endian", "leb128"]

[dependencies]

[dev-dependencies]
test-case = "2.1.0"
